# DREDGE

./: .gitignore  CHANGELOG.md  DOCKER_WORKFLOW_METHODOLOGY.md  DREDGE × Dolly  Dockerfile  EXTENDED_BENCHMARK_README.md  MCP_SERVER.md  PERFORMANCE.md  Package.swift  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.0.md  REPOSITORY_ORGANIZATION.md  REPOSITORY_STATUS.md  SharedStore.swift  chat-gpt-1.2025.112_archive.torrent  docker-compose.yml  pyproject.toml  quasimoto_6d_benchmark.py  quasimoto_extended_benchmark.py  requirements.txt  setup.py
.build/: build.db  plugin-tools.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: dependadredgeabot.md
.github/workflows/: ci-swift.yml  ci.yml  docker-publish.yml  docker-test.yml  dredge-mcp-responder.yml  release.yml
Sources/DREDGE-Cli/: main.swift
Sources/DredgeApp/: DREDGE_MVP.swift
Tests/DREDGE-CliTests/: DREDGE_CliTests.swift
csrc/: fused_wave.cpp  fused_wave_kernel.cu
docs/: ARCHITECTURE_ENHANCEMENTS.md  CUSTOM_CUDA_OPS.md  INTEGRATION_SUMMARY.md  VSCODE_SETUP.md  uh-ios-paper.md  uhios-implementation-summary.md
dredge-x-dolly/DredgeCore/: SharedStore.swift
src/dredge/: __init__.py  __main__.py  batch_pipeline.py  (+7 more)
swift/: Package.swift
tests/: test_basic.py  test_cli_commands.py  test_integration.py  test_performance.py  test_phase2_features.py  test_phase4_5_features.py
uh-ios/: Cargo.toml  README.md  build.rs
uh-ios-app/: Package.swift
uh-ios/src/: capability.rs  exit.rs  hvf.rs  hvf_bridge.cpp  hvf_bridge.h  lib.rs  memory.rs  types.rs  vm.rs
(+16 files in other folders)
